--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=techback
 springdoc.swagger-ui.path=/swagger-ui.html
 #http://localhost:8080/swagger-ui.html
 springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=method
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
